<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    tools:context="cn.hll520.lpc.SoftwareTest.Activity.ContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#2196F3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/My"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:tint="#00FFFFFF"
            app:srcCompat="@drawable/avatar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/contact_Top"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/add"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:tint="@android:color/background_light"
            app:srcCompat="@android:drawable/ic_search_category_default" />

        <ImageView
            android:id="@+id/MainMenu"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:tint="@android:color/background_light"
            app:srcCompat="@android:drawable/ic_input_add" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/PeopleING"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/Contacting"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <TextView
            android:id="@+id/Contactinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/IngSF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="班级过滤" />

        <Spinner
            android:id="@+id/MentCheose"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:entries="@array/ChoseMent" />

        <Button
            android:id="@+id/MentOk"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/click2"
            android:text="确定"
            android:textSize="10sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/PeopleList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#DDFFF9F9"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/click"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:tint="#03A9F4"
                app:srcCompat="@android:drawable/sym_action_chat" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_info"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/people"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/click"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:tint="#F44336"
                app:srcCompat="@android:drawable/ic_menu_myplaces" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_contact"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/classTab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/click"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:tint="#2196F3"
                app:srcCompat="@android:drawable/ic_menu_today" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_class"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>